[package]
name = "crosstown_bus"
version = "1.1.4"
edition = "2021"
authors = ["paoloposso <pvictorsys@gmail.com>"]
readme = "README.md"
repository = "https://github.com/paoloposso/crosstown_bus"
description = "Event Bus with RabbitMQ for Rust"
license = "MIT OR Apache-2.0"
keywords = ["messaging", "amqp", "borsh", "queue", "message-handler"]
categories = ["async", "api-bindings", "microservices"]

[dependencies]
amiquip = "0.4.2"
futures = "0.3.31"
borsh = "1.5.7"
borsh-derive = "1.5.7"
tokio = { version = "1.44.2", features = ["full"] }
