[package]
name = "crosstown_bus"
version = "2.0.0"
edition = "2021"
rust-version = "1.80"
authors = ["paoloposso <pvictorsys@gmail.com>"]
readme = "README.md"
repository = "https://github.com/paoloposso/crosstown_bus"
description = "Event Bus with RabbitMQ for Rust"
license = "MIT OR Apache-2.0"
keywords = ["messaging", "amqp", "borsh", "queue", "message-handler"]
categories = ["asynchronous", "api-bindings", "network-programming"]

[dependencies]
amiquip = "0.4.2"
borsh = "1.5.7"
borsh-derive = "1.5.7"
